# llm_advisory

./: README.md  pyproject.toml
examples/: compile_data_artefacts.py  run_basic.py  run_moral.py
src/llm_advisory/: __init__.py  llm_advisor.py  llm_advisory.py  llm_model_provider.py  pydantic_models.py
src/llm_advisory/advisors/: __init__.py  default_advisor.py  persona_advisor.py
src/llm_advisory/helper/: llm_prompt.py
src/llm_advisory/state_advisors/: __init__.py  advisory_advisor.py
tests/: test_advisor.py  test_llm_prompts.py
