[tool.poetry]
name = "llm_advisory"
version = "0.0.1"
description = "LLM Advisory"
authors = ["Daniel <daniel@vcard24.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.23"
langchain-ollama = "^0.3.2"
langchain-openai = "^0.3.14"
langgraph = "^0.3.31"
tabulate = "^0.9.0"
numpy = "*"
pandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"